@@ -14,6 +14,8 @@ o use of TLS_CIPHER_SUITE for tlsv1_2
 - 27/09/2023
 04. tcpserver.c: skip displaying IP in printstatus for sigchild
 - 17/10/2023 - indimail-mta-3.0.5
+- 26/11/2023
+05. tcpserver.c: fixed TCPLOCALPORT not getting set
 
 * Sun Apr 23 2023 17:50:00 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 13/02/2023 End 23/04/2023
